feat(i18n): add full-icu package and scripts

--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
     "url": "https://github.com/vuesion/vuesion/issues"
   },
   "scripts": {
-    "dev": "nuxt -o",
+    "dev": "NODE_ICU_DATA=node_modules/full-icu nuxt -o",
     "storybook:dev": "vuesion storybook --dev -s ./src/static",
-    "test": "vuesion test --coverage",
+    "test": "NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage",
     "generate": "vuesion generate",
     "type-gen:gql": "graphql-codegen",
     "type-gen:swagger": "openapi-typescript https://petstore.swagger.io/v2/swagger.json --output src/interfaces/swagger.ts",
     "extract-i18n-messages": "vuesion em -s -u -t",
-    "test:watch": "vuesion test --coverage --watch",
+    "test:watch": "NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage --watch",
     "e2e": "vuesion e2e",
     "lint": "vuesion lint --cache",
     "clean": "vuesion clean",
@@ -49,7 +49,7 @@
     "build": "nuxt build --modern",
     "build:analyze": "nuxt build --analyze",
     "build:spa": "nuxt generate --modern",
-    "start": "nuxt start",
+    "start": "NODE_ICU_DATA=node_modules/full-icu nuxt start",
     "e2e:ci": "npx start-server-and-test dev http://localhost:3000 e2e",
     "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" && npm run e2e:ci",
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\"",
@@ -78,6 +78,7 @@
     "cookie-parser": "1.4.5",
     "express": "4.17.1",
     "form-data": "2.3.3",
+    "full-icu": "1.3.4",
     "graphql": "15.4.0",
     "helmet": "4.4.1",
     "lodash": "4.17.21",
