chore: move pre-commit to npm scripts

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "e2e:ci": "npx start-server-and-test dev http://localhost:3000 e2e",
     "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\" && npm run e2e:ci",
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\"",
-    "postinstall": "husky install"
+    "postinstall": "husky install",
+    "pre-commit": "vuesion prettier --staged && vuesion parallel \"npm run lint\" \"npm run test\""
   },
   "dependencies": {
     "@apollo/client": "3.3.6",
