--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@nuxtjs/color-mode": "2.0.5",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
+    "@nuxtjs/google-fonts": "1.3.0",
     "@nuxtjs/html-validator": "0.4.0",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/user-event": "13.1.9",
