--- a/.github/workflows/deployment_staging.yml
+++ b/.github/workflows/deployment_staging.yml
@@ -34,6 +34,13 @@ jobs:
           path: ./src/components/b-calender-datepicke
           token: ${{ secrets.VUESION_PAT }}
 
+      - name: Checkout Vuesion+ Currency input
+        uses: actions/checkout@v2
+        with:
+          repository: vuesion/vuesion-plus-currency-input
+          path: ./src/components/c-currency-input
+          token: ${{ secrets.VUESION_PAT }}
+
       - name: Setup node
         uses: actions/setup-node@v2
         with:
