--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "url": "https://github.com/vuesion/vuesion/issues"
   },
   "scripts": {
-    "dev": "NODE_ICU_DATA=node_modules/full-icu nuxt -o",
+    "dev": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt -o",
     "storybook:dev": "vuesion storybook --dev -s ./src/static",
-    "test": "NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage",
+    "test": "cross-env NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage",
     "generate": "vuesion generate",
     "type-gen:gql": "graphql-codegen",
     "type-gen:swagger": "openapi-typescript https://petstore.swagger.io/v2/swagger.json --output src/interfaces/swagger.ts",
     "extract-i18n-messages": "vuesion em -s -u -t",
-    "test:watch": "NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage --watch",
+    "test:watch": "cross-env NODE_ICU_DATA=node_modules/full-icu vuesion test --coverage --watch",
     "e2e": "vuesion e2e",
     "lint": "vuesion lint --cache",
     "clean": "vuesion clean",
@@ -52,7 +52,7 @@
     "build": "nuxt build --modern",
     "build:analyze": "nuxt build --analyze",
     "build:spa": "nuxt generate --modern",
-    "start": "NODE_ICU_DATA=node_modules/full-icu nuxt start",
+    "start": "cross-env NODE_ICU_DATA=node_modules/full-icu nuxt start",
     "ci": "vuesion parallel \"npm run lint\" \"npm run test -- --runInBand\"",
     "postci": "vuesion parallel \"npm run build\" \"npm run storybook:build\"",
     "postinstall": "husky install",
@@ -79,6 +79,7 @@
     "apollo-cache-inmemory": "1.6.6",
     "compression": "1.7.4",
     "cookie-parser": "1.4.5",
+    "cross-env": "7.0.3",
     "express": "4.17.1",
     "form-data": "2.3.3",
     "full-icu": "1.3.4",
