--- a/package.json
+++ b/package.json
@@ -59,73 +59,75 @@
     "pre-commit": "vuesion prettier --staged && vuesion parallel \"npm run lint\" \"npm run test\""
   },
   "dependencies": {
-    "@apollo/client": "3.3.6",
+    "@apollo/client": "3.5.9",
     "@graphql-codegen/cli": "1.20.1",
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/schema-ast": "1.18.1",
     "@graphql-codegen/typescript": "1.20.2",
     "@graphql-codegen/typescript-operations": "1.17.14",
     "@nuxtjs/apollo": "4.0.1-rc.5",
-    "@nuxtjs/auth-next": "5.0.0-1613647907.37b1156",
-    "@nuxtjs/axios": "5.13.1",
+    "@nuxtjs/auth-next": "5.0.0-1643791578.532b3d6",
+    "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/composition-api": "0.20.2",
     "@nuxtjs/pwa": "3.3.5",
     "@nuxtjs/robots": "2.5.0",
     "@vue/apollo-composable": "4.0.0-alpha.12",
-    "@vuesion/models": "4.0.0-beta.3",
-    "@vuesion/utils": "4.0.0-beta.3",
-    "@vuesion/vuex-persist": "4.0.0-beta.3",
+    "@vuesion/models": "4.0.0-beta.4",
+    "@vuesion/utils": "4.0.0-beta.4",
+    "@vuesion/vuex-persist": "4.0.0-beta.4",
     "animejs": "3.2.1",
     "apollo-cache-inmemory": "1.6.6",
     "compression": "1.7.4",
-    "cookie-parser": "1.4.5",
+    "cookie-parser": "1.4.6",
     "cross-env": "7.0.3",
-    "express": "4.17.1",
+    "express": "4.17.3",
     "form-data": "2.3.3",
-    "full-icu": "1.3.4",
+    "full-icu": "1.4.0",
     "graphql": "15.4.0",
     "helmet": "4.4.1",
     "lodash": "4.17.21",
     "marked": "2.0.1",
     "node-fetch": "2.6.1",
-    "nuxt": "2.15.2",
+    "nuxt": "2.15.8",
     "nuxt-i18n": "6.20.3",
     "nuxt-winston-log": "1.2.0",
     "openapi-typescript": "3.2.3",
     "react": "16.14.0",
-    "vee-validate": "3.4.5"
+    "vee-validate": "3.4.5",
+    "vue": "2.6.14",
+    "vue-template-compiler": "2.6.14"
   },
   "devDependencies": {
     "@commitlint/cli": "12.0.1",
     "@commitlint/config-conventional": "12.0.1",
-    "@nuxt/types": "2.15.2",
-    "@nuxt/typescript-build": "2.0.6",
+    "@nuxt/types": "2.15.8",
+    "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/color-mode": "2.0.5",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/eslint-module": "3.0.2",
     "@nuxtjs/google-fonts": "1.3.0",
     "@nuxtjs/html-validator": "0.4.0",
-    "@testing-library/jest-dom": "5.11.9",
-    "@testing-library/user-event": "13.1.9",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/user-event": "13.5.0",
     "@testing-library/vue": "5.6.1",
-    "@types/animejs": "3.1.2",
-    "@types/compression": "1.7.0",
+    "@types/animejs": "3.1.4",
+    "@types/compression": "1.7.2",
     "@types/cookie-parser": "1.4.2",
-    "@types/express": "4.17.11",
+    "@types/express": "4.17.13",
     "@types/jest": "26.0.20",
-    "@types/lodash": "4.14.168",
+    "@types/lodash": "4.14.178",
     "@types/marked": "1.2.2",
-    "@types/testing-library__jest-dom": "5.9.5",
-    "@vue/test-utils": "1.1.3",
-    "@vuesion/service": "4.0.0-beta.3",
-    "@vuesion/storybook-theme-switcher": "4.0.0-beta.3",
-    "axios-mock-adapter": "1.19.0",
+    "@types/testing-library__jest-dom": "5.14.2",
+    "@vue/test-utils": "1.3.0",
+    "@vuesion/service": "4.0.0-beta.4",
+    "@vuesion/storybook-theme-switcher": "4.0.0-beta.4",
+    "axios-mock-adapter": "1.20.0",
     "babel-core": "7.0.0-bridge.0",
     "eslint-plugin-nuxt": ">=2.0.0",
     "flush-promises": "1.0.2",
-    "husky": "7.0.2",
+    "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
-    "mock-apollo-client": "1.1.0",
+    "mock-apollo-client": "1.2.0",
     "node-sass": "5.0.0"
   },
   "engines": {
