--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,7 @@ jobs:
           repository: vuesion/vuesion-plus-datatable
           path: ./src/components/a-datatable
           token: ${{ secrets.VUESION_PAT }}
+        if: github.actor == 'devCrossNet'
 
       - name: Checkout Vuesion+ Calendar and Date picker
         uses: actions/checkout@v2
@@ -28,6 +29,7 @@ jobs:
           repository: vuesion/vuesion-plus-calander-datepicker
           path: ./src/components/b-calender-datepicke
           token: ${{ secrets.VUESION_PAT }}
+        if: github.actor == 'devCrossNet'
 
       - name: Checkout Vuesion+ Currency input
         uses: actions/checkout@v2
@@ -35,6 +37,7 @@ jobs:
           repository: vuesion/vuesion-plus-currency-input
           path: ./src/components/c-currency-input
           token: ${{ secrets.VUESION_PAT }}
+        if: github.actor == 'devCrossNet'
 
       - name: Setup node
         uses: actions/setup-node@v2
